--- a/index.html
+++ b/index.html
@@ -1,28 +1,8 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>devin morgenstern's blog</title>
-    <link rel="stylesheet" type="text/css" href="/css/main.css">
-  </head>
-  <body>
-    <nav>
-      <ul>
-        <li><a href="/">home</a></li>
-        <li><a href="/info">info</a></li>
-        <li><a href="/github">github</a></li>
-      </ul>
-    </nav>
-    <div class="container">
-      <div class="blurb">
-        <h1>Welcome</h1>
-        <p>more soon</p>
-      </div><!-- /.blurb -->
-    </div><!-- /.container -->
-    <footer>
-      <ul>
-        <li><a href="mailto:devin.morgenstern@gmail.com">email</a></li>
-        <li><a href="https://github.com/devinrm">github.com/devinrm</a></li>
-      </ul>
-    </footer>
-  </body>
-</html>
+---
+layout: default
+title: devin morgenstern's blog
+---
+<div class="blurb">
+  <h1>Hi, I'm devin morgenstern</h1>
+  <p>I'm a software developer and this is where I talk about that</p>
+</div>
