Add come configuration and minor changes

--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 ---
 layout: default
-title: devin morgenstern's blog
+title: homepage
 ---
 <div class="blurb">
   <h1>Hi, I'm devin morgenstern</h1>
-  <p>I'm a software developer and this is where I talk about that</p>
+  <p>
+    I'm a software developer living in Washington, DC. I love <a href="https://neovim.io/">neovim</a>
+    and I enjoy developing in <a href="https://www.ruby-lang.org/en/">Ruby</a>
+    on <a href="http://rubyonrails.org/">Rails</a> and playing around with <a href="http://elixir-lang.org/">Elixir</a>
+    and <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">JavaScript.</a>
+  </p>
 </div>
