--- a/reading-list/index.html
+++ b/reading-list/index.html
@@ -4,10 +4,8 @@ title: my reading list
 ---
 <h1>{{ page.title }}</h1>
 <ul class="reading-list">
-  <li>
-    <span>2016</span> »
-    <span><a href="http://www.poodr.com/">Practical Object Oriented Design in
-        Ruby by Sandi Metz</a></span>
-  </li>
+  <span>2016</span> »
+  <li><a href="http://www.poodr.com/">Practical Object Oriented Design in
+      Ruby by Sandi Metz</a></li>
 </ul>
 
