Add more books to reading list

--- a/reading-list/index.html
+++ b/reading-list/index.html
@@ -7,5 +7,13 @@ title: my reading list
   <em>2016</em>
   <li><a href="http://www.poodr.com/">Practical Object Oriented Design in
       Ruby by Sandi Metz</a></li>
+  <li><a href="https://www.confidentruby.com/">Confident Ruby by Avdi Grimm</a></li>
+  <li><a href="https://gumroad.com/l/ruby-science">Ruby Science by thoughtbot</a></li>
+  <li><a href="http://linuxcommand.org/tlcl.php">The Linux Command Line by
+      William E. Shotts, Jr.</a></li>
+  <li><a href="https://pragprog.com/book/ruby4/programming-ruby-1-9-2-0">Programming Ruby 1.9 & 2.0 (4th edition)
+      by Dave Thomas, with Chad Fowler and Andy Hunt</a></li>
+  <li><a href="https://pragprog.com/book/tpp/the-pragmatic-programmer">The Pragmatic Programmer
+      by Andrew Hunt and David Thomas</a></li>
 </ul>
 
