--- a/reading-list/index.html
+++ b/reading-list/index.html
@@ -15,7 +15,7 @@ title: my reading list
       by Dave Thomas, with Chad Fowler and Andy Hunt</a></li>
   <li><a href="https://pragprog.com/book/tpp/the-pragmatic-programmer">The Pragmatic Programmer
       by Andrew Hunt and David Thomas</a></li>
-  <em class="reading-list">2015</em>
+  <em class="reading-list-year">2015</em>
   <li><a href="https://www.railstutorial.org/">The Ruby on Rails Tutorial -
       Learn Web Development with Rails by Michael Hartl</a></li>
   <li><a href="http://eloquentjavascript.net/">Eloquent JavaScript - Second
