Third times a charm

--- a/reading-list/index.html
+++ b/reading-list/index.html
@@ -14,8 +14,8 @@ title: my reading list
   <li><a href="https://pragprog.com/book/ruby4/programming-ruby-1-9-2-0">Programming Ruby 1.9 & 2.0 (4th edition)
       by Dave Thomas, with Chad Fowler and Andy Hunt</a></li>
   <li><a href="https://pragprog.com/book/tpp/the-pragmatic-programmer">The Pragmatic Programmer
-      by Andrew Hunt and David Thomas</a></li>
-  <em class="reading-list-year">2015</em>
+      by Andrew Hunt and David Thomas</a></li></br>
+  <em>2015</em>
   <li><a href="https://www.railstutorial.org/">The Ruby on Rails Tutorial -
       Learn Web Development with Rails by Michael Hartl</a></li>
   <li><a href="http://eloquentjavascript.net/">Eloquent JavaScript - Second
