--- a/reading-list/index.html
+++ b/reading-list/index.html
@@ -4,6 +4,18 @@ title: my reading list
 ---
 <h1>{{ page.title }}</h1>
 <ul class="reading-list">
+  <em>2017</em>
+  <li><a href="http://eloquentruby.com/">Eloquent Ruby by Russ Olsen</a></li>
+  <li><a href="https://pragprog.com/book/rails5/agile-web-development-with-rails-5">Agile Web Development with Rails 5
+      by Sam Ruby</a></li>
+  <li><a href="https://pragprog.com/book/jvrails2/crafting-rails-4-applications">Crafting Rails 4 Applications
+      by José Valim</a></li>
+  <li><a href="http://patshaughnessy.net/ruby-under-a-microscope">Ruby Under a
+      Microscope by Pat Shaughnessy</a></li>
+  <li><a href="https://www.manning.com/books/the-well-grounded-rubyist-second-edition">The Well-Grounded Rubyist, Second Edition
+      by David A. Black</a></li>
+  <li><a href="https://pragprog.com/book/btlang/seven-languages-in-seven-weeks">Seven Languages in Seven Weeks
+      by Bruce A. Tate</a></li></br>
   <em>2016</em>
   <li><a href="http://www.poodr.com/">Practical Object Oriented Design in
       Ruby by Sandi Metz</a></li>
