Make accessible lists

--- a/reading-list/index.html
+++ b/reading-list/index.html
@@ -3,8 +3,8 @@ layout: default
 title: my reading list
 ---
 <h1>{{ page.title }}</h1>
+<em>2017</em>
 <ul class="reading-list">
-  <em>2017</em>
   <li><a href="http://eloquentruby.com/">Eloquent Ruby by Russ Olsen</a></li>
   <li><a href="https://pragprog.com/book/rails5/agile-web-development-with-rails-5">Agile Web Development with Rails 5
       by Sam Ruby</a></li>
@@ -15,8 +15,10 @@ title: my reading list
   <li><a href="https://www.manning.com/books/the-well-grounded-rubyist-second-edition">The Well-Grounded Rubyist, Second Edition
       by David A. Black</a></li>
   <li><a href="https://pragprog.com/book/btlang/seven-languages-in-seven-weeks">Seven Languages in Seven Weeks
-      by Bruce A. Tate</a></li></br>
-  <em>2016</em>
+      by Bruce A. Tate</a></li>
+</ul>
+<em>2016</em>
+<ul>
   <li><a href="http://www.poodr.com/">Practical Object Oriented Design in
       Ruby by Sandi Metz</a></li>
   <li><a href="https://www.confidentruby.com/">Confident Ruby by Avdi Grimm</a></li>
@@ -26,8 +28,10 @@ title: my reading list
   <li><a href="https://pragprog.com/book/ruby4/programming-ruby-1-9-2-0">Programming Ruby 1.9 & 2.0 (4th edition)
       by Dave Thomas, with Chad Fowler and Andy Hunt</a></li>
   <li><a href="https://pragprog.com/book/tpp/the-pragmatic-programmer">The Pragmatic Programmer
-      by Andrew Hunt and David Thomas</a></li></br>
-  <em>2015</em>
+      by Andrew Hunt and David Thomas</a></li>
+</ul>
+<em>2015</em>
+<ul>
   <li><a href="https://www.railstutorial.org/">The Ruby on Rails Tutorial -
       Learn Web Development with Rails by Michael Hartl</a></li>
   <li><a href="http://eloquentjavascript.net/">Eloquent JavaScript - Second
