Add missing book

--- a/reading-list/index.html
+++ b/reading-list/index.html
@@ -19,6 +19,8 @@ title: my reading list
 </ul>
 <em>2016</em>
 <ul>
+  <li><a href="http://www.growing-object-oriented-software.com/">Growing Object-Oriented Software
+      Guided by Tests by Steve Freeman and Nat Pryce</a></li>
   <li><a href="http://www.poodr.com/">Practical Object Oriented Design in
       Ruby by Sandi Metz</a></li>
   <li><a href="https://www.confidentruby.com/">Confident Ruby by Avdi Grimm</a></li>
