--- a/reading-list/index.html
+++ b/reading-list/index.html
@@ -2,9 +2,9 @@
 layout: default
 title: reading list
 ---
-<h1>{{ page.title }}</h1>
+<h1 class="reading-list">{{ page.title }}</h1>
 <em>2017</em>
-<ul class="reading-list">
+<ul>
   <li><a href="http://eloquentruby.com/">Eloquent Ruby by Russ Olsen</a></li>
   <li><a href="https://pragprog.com/book/rails5/agile-web-development-with-rails-5">Agile Web Development with Rails 5
       by Sam Ruby</a></li>
