Add styling to the reading list

--- a/reading-list/index.html
+++ b/reading-list/index.html
@@ -3,40 +3,41 @@ layout: default
 title: reading list
 ---
 <h1 class="reading-list">{{ page.title }}</h1>
-<em>2017</em>
-<ul>
-  <li><a href="http://eloquentruby.com/">Eloquent Ruby by Russ Olsen</a></li>
-  <li><a href="https://pragprog.com/book/rails5/agile-web-development-with-rails-5">Agile Web Development with Rails 5
-      by Sam Ruby</a></li>
-  <li><a href="https://pragprog.com/book/jvrails2/crafting-rails-4-applications">Crafting Rails 4 Applications
-      by José Valim</a></li>
-  <li><a href="http://patshaughnessy.net/ruby-under-a-microscope">Ruby Under a
-      Microscope by Pat Shaughnessy</a></li>
-  <li><a href="https://www.manning.com/books/the-well-grounded-rubyist-second-edition">The Well-Grounded Rubyist, Second Edition
-      by David A. Black</a></li>
-  <li><a href="https://pragprog.com/book/btlang/seven-languages-in-seven-weeks">Seven Languages in Seven Weeks
-      by Bruce A. Tate</a></li>
-</ul>
-<em>2016</em>
-<ul>
-  <li><a href="http://www.growing-object-oriented-software.com/">Growing Object-Oriented Software
-      Guided by Tests by Steve Freeman and Nat Pryce</a></li>
-  <li><a href="http://www.poodr.com/">Practical Object Oriented Design in
-      Ruby by Sandi Metz</a></li>
-  <li><a href="https://www.confidentruby.com/">Confident Ruby by Avdi Grimm</a></li>
-  <li><a href="https://gumroad.com/l/ruby-science">Ruby Science by thoughtbot</a></li>
-  <li><a href="http://linuxcommand.org/tlcl.php">The Linux Command Line by
-      William E. Shotts, Jr.</a></li>
-  <li><a href="https://pragprog.com/book/ruby4/programming-ruby-1-9-2-0">Programming Ruby 1.9 & 2.0 (4th edition)
-      by Dave Thomas, with Chad Fowler and Andy Hunt</a></li>
-  <li><a href="https://pragprog.com/book/tpp/the-pragmatic-programmer">The Pragmatic Programmer
-      by Andrew Hunt and David Thomas</a></li>
-</ul>
-<em>2015</em>
-<ul>
-  <li><a href="https://www.railstutorial.org/">The Ruby on Rails Tutorial -
-      Learn Web Development with Rails by Michael Hartl</a></li>
-  <li><a href="http://eloquentjavascript.net/">Eloquent JavaScript - Second
-      Edition by Marijn Haverbeke</a></li>
-</ul>
-
+<div class="books">
+  <em>2017</em>
+  <ul>
+    <li><a href="http://eloquentruby.com/">Eloquent Ruby by Russ Olsen</a></li>
+    <li><a href="https://pragprog.com/book/rails5/agile-web-development-with-rails-5">Agile Web Development with Rails 5
+        by Sam Ruby</a></li>
+    <li><a href="https://pragprog.com/book/jvrails2/crafting-rails-4-applications">Crafting Rails 4 Applications
+        by José Valim</a></li>
+    <li><a href="http://patshaughnessy.net/ruby-under-a-microscope">Ruby Under a
+        Microscope by Pat Shaughnessy</a></li>
+    <li><a href="https://www.manning.com/books/the-well-grounded-rubyist-second-edition">The Well-Grounded Rubyist, Second Edition
+        by David A. Black</a></li>
+    <li><a href="https://pragprog.com/book/btlang/seven-languages-in-seven-weeks">Seven Languages in Seven Weeks
+        by Bruce A. Tate</a></li>
+  </ul>
+  <em>2016</em>
+  <ul>
+    <li><a href="http://www.growing-object-oriented-software.com/">Growing Object-Oriented Software
+        Guided by Tests by Steve Freeman and Nat Pryce</a></li>
+    <li><a href="http://www.poodr.com/">Practical Object Oriented Design in
+        Ruby by Sandi Metz</a></li>
+    <li><a href="https://www.confidentruby.com/">Confident Ruby by Avdi Grimm</a></li>
+    <li><a href="https://gumroad.com/l/ruby-science">Ruby Science by thoughtbot</a></li>
+    <li><a href="http://linuxcommand.org/tlcl.php">The Linux Command Line by
+        William E. Shotts, Jr.</a></li>
+    <li><a href="https://pragprog.com/book/ruby4/programming-ruby-1-9-2-0">Programming Ruby 1.9 & 2.0 (4th edition)
+        by Dave Thomas, with Chad Fowler and Andy Hunt</a></li>
+    <li><a href="https://pragprog.com/book/tpp/the-pragmatic-programmer">The Pragmatic Programmer
+        by Andrew Hunt and David Thomas</a></li>
+  </ul>
+  <em>2015</em>
+  <ul>
+    <li><a href="https://www.railstutorial.org/">The Ruby on Rails Tutorial -
+        Learn Web Development with Rails by Michael Hartl</a></li>
+    <li><a href="http://eloquentjavascript.net/">Eloquent JavaScript - Second
+        Edition by Marijn Haverbeke</a></li>
+  </ul>
+</div>
