Make the list style less boring

--- a/reading-list/index.html
+++ b/reading-list/index.html
@@ -5,7 +5,7 @@ title: reading list
 <h1 class="reading-list">{{ page.title }}</h1>
 <div class="books">
   <em>2017</em>
-  <ul>
+  <ul class="yearbooks">
     <li><a href="http://eloquentruby.com/">Eloquent Ruby by Russ Olsen</a></li>
     <li><a href="https://pragprog.com/book/rails5/agile-web-development-with-rails-5">Agile Web Development with Rails 5
         by Sam Ruby</a></li>
@@ -19,7 +19,7 @@ title: reading list
         by Bruce A. Tate</a></li>
   </ul>
   <em>2016</em>
-  <ul>
+  <ul class="yearbooks">
     <li><a href="http://www.growing-object-oriented-software.com/">Growing Object-Oriented Software
         Guided by Tests by Steve Freeman and Nat Pryce</a></li>
     <li><a href="http://www.poodr.com/">Practical Object Oriented Design in
@@ -34,7 +34,7 @@ title: reading list
         by Andrew Hunt and David Thomas</a></li>
   </ul>
   <em>2015</em>
-  <ul>
+  <ul class="yearbooks">
     <li><a href="https://www.railstutorial.org/">The Ruby on Rails Tutorial -
         Learn Web Development with Rails by Michael Hartl</a></li>
     <li><a href="http://eloquentjavascript.net/">Eloquent JavaScript - Second
