Add latest book to reading list

--- a/reading-list/index.html
+++ b/reading-list/index.html
@@ -6,6 +6,8 @@ title: reading list
 <div class="books">
   <em>2017</em>
   <ul class="yearbooks">
+    <li><a href="https://pragprog.com/book/jaerlang2/programming-erlang">Programming Erlang (2nd edition)
+        by Joe Armstrong</a></li>
     <li><a href="http://eloquentruby.com/">Eloquent Ruby by Russ Olsen</a></li>
     <li><a href="https://pragprog.com/book/rails5/agile-web-development-with-rails-5">Agile Web Development with Rails 5
         by Sam Ruby</a></li>
