Add another book

--- a/reading-list/index.html
+++ b/reading-list/index.html
@@ -6,6 +6,8 @@ title: reading list
 <div class="books">
   <em>2017</em>
   <ul class="yearbooks">
+    <li><a href="http://shop.oreilly.com/product/0636920039303.do">You Don't Know JS: Up & Going
+        By Kyle Simpson</a></li>
     <li><a href="https://pragprog.com/book/jaerlang2/programming-erlang">Programming Erlang (2nd edition)
         by Joe Armstrong</a></li>
     <li><a href="http://eloquentruby.com/">Eloquent Ruby by Russ Olsen</a></li>
