Update Reading list

--- a/reading-list/index.html
+++ b/reading-list/index.html
@@ -7,8 +7,13 @@ title: reading list
   <em>2017</em>
   <ul class="yearbooks">
     <li>
+      <a href="http://shop.oreilly.com/product/0636920033738.do">
+         You Don't Know JS: this & Object Prototypes By Kyle Simpson
+      </a>
+    </li>
+    <li>
       <a href="http://shop.oreilly.com/product/0636920026327.do">
-        You Don't Know JS: Scope & Closures by Kyle Simpson
+        You Don't Know JS: Scope & Closures By Kyle Simpson
       </a>
     </li>
     <li>
