Update reading list

--- a/reading-list/index.html
+++ b/reading-list/index.html
@@ -22,6 +22,11 @@ title: reading list
       </a>
     </li>
     <li>
+      <a href="https://pragprog.com/book/elixir13/programming-elixir-1-3">
+        Programming Elixir 1.3 by Dave Thomas
+      </a>
+    </li>
+    <li>
       <a href="https://pragprog.com/book/jaerlang2/programming-erlang">
         Programming Erlang (2nd edition) by Joe Armstrong
       </a>
