Add latest finished book

--- a/reading-list/index.html
+++ b/reading-list/index.html
@@ -7,6 +7,11 @@ title: reading list
   <em>2017</em>
   <ul class="yearbooks">
     <li>
+      <a href="http://shop.oreilly.com/product/0636920033752.do">
+       You Don't Know JS: Async & Performance By Kyle Simpson
+       </a>
+    </li>
+    <li>
       <a href="http://shop.oreilly.com/product/0636920033745.do">
          You Don't Know JS: Types & Grammar By Kyle Simpson
       </a>
