--- a/reading-list/index.html
+++ b/reading-list/index.html
@@ -7,6 +7,16 @@ title: reading list
   <em>2017</em>
   <ul class="yearbooks">
     <li>
+      <a href="https://www.manning.com/books/grokking-algorithms">
+        Grokking Algorithms An illustrated guide for programmers and other curious people
+      </a>
+    </li>
+    <li>
+      <a href="http://shop.oreilly.com/product/0636920033769.do">
+        You Don't Know JS: ES6 & Beyond By Kyle Simpson
+      </a>
+    </li>
+    <li>
       <a href="http://shop.oreilly.com/product/0636920033752.do">
        You Don't Know JS: Async & Performance By Kyle Simpson
        </a>
