--- a/reading-list/index.html
+++ b/reading-list/index.html
@@ -7,6 +7,11 @@ title: reading list
   <em>2017</em>
   <ul class="yearbooks">
     <li>
+      <a href="https://www.pearsonhighered.com/program/Beck-Extreme-Programming-Explained-Embrace-Change-2nd-Edition/PGM155384.html">
+        Extreme Programming Explained: Embrace Change, 2nd Edition by Kent Beck with Cynthia Andres
+      </a>
+    </li>
+    <li>
       <a href="https://www.manning.com/books/grokking-algorithms">
         Grokking Algorithms An illustrated guide for programmers and other curious people
       </a>
