--- a/reading-list/index.html
+++ b/reading-list/index.html
@@ -8,12 +8,12 @@ title: reading list
   <ul class="yearbooks">
     <li>
       <a href="https://www.pearsonhighered.com/program/Beck-Extreme-Programming-Explained-Embrace-Change-2nd-Edition/PGM155384.html">
-        Extreme Programming Explained: Embrace Change, 2nd Edition by Kent Beck with Cynthia Andres
+        Extreme Programming Explained: Embrace Change by Kent Beck with Cynthia Andres
       </a>
     </li>
     <li>
       <a href="https://www.manning.com/books/grokking-algorithms">
-        Grokking Algorithms An illustrated guide for programmers and other curious people
+        Grokking Algorithms by Aditya Y. Bhargava
       </a>
     </li>
     <li>
