Add latest book

--- a/reading-list/index.html
+++ b/reading-list/index.html
@@ -7,6 +7,11 @@ title: reading list
   <em>2017</em>
   <ul class="yearbooks">
     <li>
+      <a href="https://gumroad.com/l/testing-rails/">
+        Testing Rails by Josh Steiner and Joël Quenneville
+      </a>
+    </li>
+    <li>
       <a href="https://www.pearsonhighered.com/program/Beck-Extreme-Programming-Explained-Embrace-Change-2nd-Edition/PGM155384.html">
         Extreme Programming Explained: Embrace Change by Kent Beck with Cynthia Andres
       </a>
@@ -105,7 +110,7 @@ title: reading list
     </li>
     <li>
       <a href="https://gumroad.com/l/ruby-science">
-        Ruby Science by thoughtbot
+        Ruby Science by Joe Ferris, Harlow Ward, and thoughtbot
       </a>
     </li>
     <li>
