Semantic changes and new quote

--- a/reading-list/index.html
+++ b/reading-list/index.html
@@ -3,7 +3,7 @@ layout: default
 title: reading list
 ---
 <h1 class="reading-list">{{ page.title }}</h1>
-<div class="books">
+<article class="books">
   <em>2017</em>
   <ul class="yearbooks">
     <li>
@@ -28,17 +28,17 @@ title: reading list
     </li>
     <li>
       <a href="http://shop.oreilly.com/product/0636920033752.do">
-       You Don't Know JS: Async & Performance By Kyle Simpson
-       </a>
+        You Don't Know JS: Async & Performance By Kyle Simpson
+      </a>
     </li>
     <li>
       <a href="http://shop.oreilly.com/product/0636920033745.do">
-         You Don't Know JS: Types & Grammar By Kyle Simpson
+        You Don't Know JS: Types & Grammar By Kyle Simpson
       </a>
     </li>
     <li>
       <a href="http://shop.oreilly.com/product/0636920033738.do">
-         You Don't Know JS: this & Object Prototypes By Kyle Simpson
+        You Don't Know JS: this & Object Prototypes By Kyle Simpson
       </a>
     </li>
     <li>
@@ -103,32 +103,32 @@ title: reading list
       <a href="http://www.poodr.com/">
         Practical Object Oriented Design in Ruby by Sandi Metz
       </a></li>
-    <li>
-      <a href="https://www.confidentruby.com/">
-        Confident Ruby by Avdi Grimm
-      </a>
-    </li>
-    <li>
-      <a href="https://gumroad.com/l/ruby-science">
-        Ruby Science by Joe Ferris, Harlow Ward, and thoughtbot
-      </a>
-    </li>
-    <li>
-      <a href="http://linuxcommand.org/tlcl.php">
-        The Linux Command Line by William E. Shotts, Jr.
-      </a>
-    </li>
-    <li>
-      <a href="https://pragprog.com/book/ruby4/programming-ruby-1-9-2-0">
-        Programming Ruby 1.9 & 2.0 (4th edition) by Dave Thomas, with Chad Fowler
-        and Andy Hunti
-      </a>
-    </li>
-    <li>
-      <a href="https://pragprog.com/book/tpp/the-pragmatic-programmer">
-        The Pragmatic Programmer by Andrew Hunt and David Thomas
-      </a>
-    </li>
+      <li>
+        <a href="https://www.confidentruby.com/">
+          Confident Ruby by Avdi Grimm
+        </a>
+      </li>
+      <li>
+        <a href="https://gumroad.com/l/ruby-science">
+          Ruby Science by Joe Ferris, Harlow Ward, and thoughtbot
+        </a>
+      </li>
+      <li>
+        <a href="http://linuxcommand.org/tlcl.php">
+          The Linux Command Line by William E. Shotts, Jr.
+        </a>
+      </li>
+      <li>
+        <a href="https://pragprog.com/book/ruby4/programming-ruby-1-9-2-0">
+          Programming Ruby 1.9 & 2.0 (4th edition) by Dave Thomas, with Chad Fowler
+          and Andy Hunti
+        </a>
+      </li>
+      <li>
+        <a href="https://pragprog.com/book/tpp/the-pragmatic-programmer">
+          The Pragmatic Programmer by Andrew Hunt and David Thomas
+        </a>
+      </li>
   </ul>
   <em>2015</em>
   <ul class="yearbooks">
@@ -143,4 +143,4 @@ title: reading list
       </a>
     </li>
   </ul>
-</div>
+</article>
