CSS and markup cleanup

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 layout: default
 title: devin morgenstern
 ---
-<div class="blurb">
+<article class="blurb">
   <h1>devin morgenstern</h1>
-  <p>
+  <section class="intro">
     I'm a software developer.
-  </p>
-</div>
+  </section>
+</article>
