--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: devin morgenstern
 ---
 <article class="blurb">
   <h1>devin morgenstern</h1>
-  <section class="intro">
+  <section class="intro" role="region" aria-label="Introduction about me">
     I'm a software developer.
   </section>
 </article>
