--- a/reading-list/index.html
+++ b/reading-list/index.html
@@ -7,6 +7,11 @@ title: reading list
   <em>2017</em>
   <ul class="yearbooks">
     <li>
+      <a href="https://pragprog.com/book/jwdsal/a-common-sense-guide-to-data-structures-and-algorithms">
+        A Common-Sense Guide to Data Structures and Algorithms by Jay Wengrow
+      </a>
+    </li>
+    <li>
       <a href="https://gumroad.com/l/testing-rails/">
         Testing Rails by Josh Steiner and Joël Quenneville
       </a>
