A complete redesign and new books

--- a/_pages/01_reading-list.html
+++ b/_pages/01_reading-list.html
@@ -1,11 +1,25 @@
 ---
-layout: default
+layout: page
 title: reading list
+permalink: /reading-list/
 ---
-<h1 class="reading-list">{{ page.title }}</h1>
-<article class="books">
+
+<header class="reading-list">
+  <h2>{{ page.title }}</h2>
+</header>
+<section>
   <em>2017</em>
-  <ul class="yearbooks">
+  <ul class="books">
+    <li>
+      <a href="https://pragprog.com/book/pg_sass3/pragmatic-guide-to-sass-3">
+        Pragmatic Guide to Sass 3 by Hampton Lintorn Catlin and Michael Lintorn Catlin
+      </a>
+    </li>
+    <li>
+      <a href="https://pragprog.com/book/bhh52e/html5-and-css3">
+        HTML5 and CSS3 (2nd edition) by Brian P. Hogan
+      </a>
+    </li>
     <li>
       <a href="https://pragprog.com/book/jwdsal/a-common-sense-guide-to-data-structures-and-algorithms">
         A Common-Sense Guide to Data Structures and Algorithms by Jay Wengrow
@@ -98,7 +112,7 @@ title: reading list
     </li>
   </ul>
   <em>2016</em>
-  <ul class="yearbooks">
+  <ul class="books">
     <li>
       <a href="http://www.growing-object-oriented-software.com/">
         Growing Object-Oriented Software Guided by Tests by Steve Freeman and Nat Pryce
@@ -136,7 +150,7 @@ title: reading list
       </li>
   </ul>
   <em>2015</em>
-  <ul class="yearbooks">
+  <ul class="books">
     <li>
       <a href="https://www.railstutorial.org/">
         The Ruby on Rails Tutorial - Learn Web Development with Rails by Michael Hartl
@@ -148,4 +162,4 @@ title: reading list
       </a>
     </li>
   </ul>
-</article>
+</section>
