--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 layout: default
 title: devin morgenstern
 ---
-<article class="blurb">
-  <h1>devin morgenstern</h1>
-  <section class="intro" aria-label="Introduction about me">
-    I'm a software developer.
-  </section>
-</article>
+
+<aside class="intro">
+  <p class="quote">
+  “I remember thinking, Oh my God, it worked." </br>
+      -Margaret Hamilton, Apollo 11 Software Engineer
+  </p>
+</aside>
