--- a/_pages/01_reading-list.html
+++ b/_pages/01_reading-list.html
@@ -11,6 +11,11 @@ permalink: /reading-list/
   <em>2017</em>
   <ul class="books">
     <li>
+      <a href="http://objectsonrails.com/">
+        Objects on Rails by Avdi Grimm
+      </a>
+    </li>
+    <li>
       <a href="https://pragprog.com/book/pg_sass3/pragmatic-guide-to-sass-3">
         Pragmatic Guide to Sass 3 by Hampton Lintorn Catlin and Michael Lintorn Catlin
       </a>
