Add latest book

--- a/_pages/01_reading-list.html
+++ b/_pages/01_reading-list.html
@@ -11,6 +11,11 @@ permalink: /reading-list/
   <em>2017</em>
   <ul class="books">
     <li>
+      <a href="https://w3.cs.jmu.edu/spragunr/CS240_F12/ConciseNotes.pdf">
+        Concise Notes on Data Structures and Algorithms by Christopher Fox
+      </a>
+    </li>
+    <li>
       <a href="http://objectsonrails.com/">
         Objects on Rails by Avdi Grimm
       </a>
