--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ title: devin morgenstern
 <aside class="intro">
   <p class="quote">
   “I remember thinking, Oh my God, it worked." </br>
-      -Margaret Hamilton, Apollo 11 Software Engineer
+      -<a href="https://www.nasa.gov/feature/margaret-hamilton-apollo-software-engineer-awarded-presidential-medal-of-freedom">
+        Margaret Hamilton</a>, Apollo 11 Software Engineer
   </p>
 </aside>
