--- a/_pages/01_reading-list.html
+++ b/_pages/01_reading-list.html
@@ -155,7 +155,7 @@ permalink: /reading-list/
       <li>
         <a href="https://pragprog.com/book/ruby4/programming-ruby-1-9-2-0">
           Programming Ruby 1.9 & 2.0 (4th edition) by Dave Thomas, with Chad Fowler
-          and Andy Hunti
+          and Andy Hunt
         </a>
       </li>
       <li>
