--- a/_pages/01_reading-list.html
+++ b/_pages/01_reading-list.html
@@ -11,6 +11,11 @@ permalink: /reading-list/
   <em>2017</em>
   <ul class="books">
     <li>
+      <a href="https://www.bottomupcs.com/">
+        Computer Science from the Bottom Up by Ian Wienand
+      </a>
+    </li>
+    <li>
       <a href="http://shop.oreilly.com/product/0636920028192.do">
         Computer Science Programming Basics in Ruby By Ophir Frieder, Gideon Frieder, David Grossman
       </a>
