Comic book redesign

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@ title: devin morgenstern
   <p class="quote">
   “I remember thinking, Oh my God, it worked." </br>
       -<a href="https://www.nasa.gov/feature/margaret-hamilton-apollo-software-engineer-awarded-presidential-medal-of-freedom">
-        Margaret Hamilton</a>, Apollo 11 Software Engineer
+        Margaret Hamilton</a>, <span>Apollo 11 Software Engineer</span>
   </p>
 </aside>
