--- a/_pages/01_books.html
+++ b/_pages/01_books.html
@@ -1,15 +1,12 @@
 ---
 layout: default
-title: reading list
-permalink: /reading-list/
+title: books
+permalink: /books/
 ---
 
-<header class="reading-list">
-  <h2>{{ page.title }}</h2>
-</header>
-<section>
+<section class="books">
   <em>2017</em>
-  <ul class="books">
+  <ul class="book">
     <li>
       <a href="https://www.bottomupcs.com/">
         Computer Science from the Bottom Up by Ian Wienand
