--- a/_pages/01_books.html
+++ b/_pages/01_books.html
@@ -8,6 +8,11 @@ permalink: /books/
   <em>2017</em>
   <ul class="book">
     <li>
+      <a href="http://shop.oreilly.com/product/9780596802806.do">
+        High Performance JavaScript: Build Faster Web Application Interfaces By Nicholas Zakas
+      </a>
+    </li>
+    <li>
       <a href="https://www.bottomupcs.com/">
         Computer Science from the Bottom Up by Ian Wienand
       </a>
